# movie-player

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  vcpkg.json
extlibs/libyuv/: CMakeLists.txt
extlibs/miniaudio/: miniaudio.h
include/: IAudioSink.h  IMoviePlayer.h
src/android/: AudioTrackPlayer.cpp  AudioTrackPlayer.h  Constants.h  MoviePlayer.cpp  MoviePlayer.h  MoviePlayerCore.cpp  MoviePlayerCore.h  TrackPlayer.cpp  TrackPlayer.h  VideoTrackPlayer.cpp  VideoTrackPlayer.h
src/common/: AudioEngine.cpp  AudioEngine.h  AudioEngineSDL.cpp  BasicLog.h  CommonUtils.h  InlineLog.h  MediaClock.cpp  MediaClock.h  MediaTimer.h  MessageLooper.cpp  MessageLooper.h  PixelConvert.cpp  PixelConvert.h
src/windows/: BufferQueue.h  Constants.h  Decoder.cpp  Decoder.h  FramePacket.h  MkvFileReader.cpp  MkvFileReader.h  MkvStreamReader.cpp  MoviePlayer.cpp  MoviePlayer.h  MoviePlayerCore.cpp  MoviePlayerCore.h  OpusDecoder.cpp  OpusDecoder.h  VorbisDecoder.cpp  VorbisDecoder.h  VpxDecoder.cpp  VpxDecoder.h  WebmExtractor.cpp  WebmExtractor.h
test/android/: .project  Makefile
test/android/app/: build.gradle
test/android/app/src/main/: AndroidManifest.xml
test/android/app/src/main/cpp/: AAudioSink.h  CMakeLists.txt  native-lib.cpp  vcpkg.json
test/android/app/src/main/java/jp/wamsoft/testmovieplayer/: MainActivity.java  MyMoviePlayer.java  TestMovieView.java
test/android/app/src/main/res/layout/: activity_main.xml
test/android/gradle/wrapper/: gradle-wrapper.properties
test/dat/: README.md  batch_conv.sh
test/windows/: CMakeLists.txt  GLRenderer.cpp  GLRenderer.h  WaveOutAudioSink.h  movie_exporter.cpp  movie_player_test.cpp  webm_test.cpp
